# minions

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Cargo.toml
backend/migrations/20260503133000_create_users/: up.sql
backend/migrations/20260504120000_add_conversation_persistence/: down.sql  up.sql
backend/migrations/20260508000000_initial_schema/: down.sql  up.sql
backend/migrations/20260517000000_add_workspace_element_assets/: down.sql  up.sql
backend/src/: db.rs  main.rs  main_tests.rs  protocol.rs  router.rs  schema.rs  session.rs  websocket.rs
backend/src/api/: conversations.rs  data.rs  minions.rs  mod.rs  sessions.rs  threads.rs  workspaces.rs
backend/src/domain/: enums.rs  mod.rs  session.rs  workspace.rs  workspace_chat.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/codex/: app_server.rs  mod.rs
backend/src/infrastructure/db/: executor.rs  mod.rs  pool.rs  session_repository.rs  workspace_chat_repository.rs  workspace_repository.rs
backend/src/services/: mod.rs  session_service.rs  workspace_chat_service.rs  workspace_service.rs
backend/src/sessions/: messages.rs  mod.rs  session_manager.rs  session_runtime.rs  workspace_chat.rs
backend/src/transport/http/: app_data.rs  helpers.rs  mod.rs  session_actions.rs  sessions.rs  workspace_chat.rs  workspaces.rs
backend/src/transport/http/responses/: app_data.rs  mod.rs  session.rs  workspace.rs
backend/src/transport/ws/: events.rs  handler.rs  mod.rs  protocol.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
mcp/: minions-server.mjs
(+79 files in other folders)
