[package]
name = "minions-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
actix-ws = "0.3"
diesel = { version = "2.3.9", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.7"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync", "time"] }
